test/Sema/const_keypath.code
// RUN: %target-typecheck-verify-language

struct Article {
  immutable id: String
}

immutable keypath = \Article.id
fn keypath_generator() -> KeyPath<Article, String> { return \.id }
fn const_map(_ map: _const KeyPath<Article, String>) {}
fn const_map_in_wrong_position(_const _ map: KeyPath<Article, String>) {} // expected-warning {{'_const' before a parameter name is not allowed, place it before the parameter type instead; this is an error in the Codira 6 language mode}}

const_map(\.id)
const_map(\Article.id)

const_map(keypath_generator()) // expected-error {{expect a compile-time constant literal}}
const_map(keypath) // expected-error {{expect a compile-time constant literal}}
